# Layout-identification-tool

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  diagram.puml  run_analysis.sh
AnalysisResult/APU.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/PPU.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/aes.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/lut_s44.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/picorv32.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/s44.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/salsa20.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/spm.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/usb.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/xtea.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/y_huff.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
AnalysisResult/zipdiv.gds/: sky130_fd_sc_hd__mux4_1.gds  sky130_fd_sc_hd_dfxtp_1.gds
LargeLayouts/: s44.gds  spm.gds  usb.gds
TestFiles/: lut_s44.gds
cmake/modules/: UnitTestModule.cmake
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/Include/: FileBrowser.hpp  FileMetadataParser.hpp  GeometryCharacteristic.hpp  GeometrySignature.hpp  LayoutAnalyzer.hpp  LayoutBitmapGenerator.hpp  LayoutData.hpp  LayoutReader.hpp  LivenshteinDistance.hpp  MskReader.hpp  SquareComparator.hpp  Stbg.h  StbgConstants.h
src/Common/Include/Hash/: Crc32.h  IHasher.hpp  Stbg++.hpp  Stbg.h
src/Common/Libs/: CMakeLists.txt
src/Common/Libs/FileBrowser/: CMakeLists.txt  FileBrowser.cpp
src/Common/Libs/FileMetadataParser/Impl/: CMakeLists.txt  FileMetadataParser.cpp
src/Common/Libs/GeometryCharacteristic/: CMakeLists.txt
src/Common/Libs/GeometryCharacteristic/Impl/: CMakeLists.txt  GeometryCharacteristic.cpp
src/Common/Libs/GeometryCharacteristic/Test/: CMakeLists.txt  main.cpp
src/Common/Libs/GeometrySignature/Impl/: CMakeLists.txt  GeometrySignature.cpp
src/Common/Libs/GeometrySignature/Test/: CMakeLists.txt  main.cpp
src/Common/Libs/Hash/: CMakeLists.txt
src/Common/Libs/Hash/Crc32/: CMakeLists.txt  Crc32.c  Crc32.cpp
src/Common/Libs/Hash/Stbg/: CMakeLists.txt  Stbg.cpp
src/Common/Libs/Hash/Stbg/Test/: CMakeLists.txt  main.cpp
src/Common/Libs/LayoutAnalyzer/Impl/: CMakeLists.txt  LayoutAnalyzer.cpp
src/Common/Libs/LayoutReader/Impl/: CMakeLists.txt
src/Common/Libs/LayoutReader/Impl/ReaderImpl/: GdsiiBinaryReader.cpp
src/LayoutIdentificationTool/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/LayoutIdentificationTool/Common/FileBrowser/: FileBrowser.cpp  FileBrowser.hpp
src/LayoutIdentificationTool/Settings/: SettingsDialog.cpp  SettingsHandler.cpp  SettingsPages.cpp
src/LayoutIdentificationTool/Settings/Headers/: ISettingsPageWidget.hpp  SettingsDialog.hpp  SettingsHandler.hpp  SettingsPages.hpp
src/LayoutIdentificationTool/Settings/Includes/: ISettingsPageWidget.hpp  SettingsDialog.hpp
src/LitClient/: CMakeLists.txt  ClientMain.cpp  MainWindow.cpp  MainWindow.hpp
src/LitClient/LayoutCard/: LayoutCard.cpp  LayoutCard.hpp
src/LitClient/LayoutWidget/: GeometryWidget.cpp  GeometryWidget.hpp  LayerSelectWidget.cpp  LayerSelectWidget.hpp  LayoutWidget.cpp
src/LitClient/Pages/IcLayoutPage/: LcLayoutPage.cpp  LcLayoutPage.hpp
src/LitClient/Resources/: icon.rc  resource.qrc
src/LitClient/Task/: Helpers.cpp  Helpers.hpp  TaskManager.cpp  TaskManager.hpp  Tasks.cpp  Tasks.hpp
src/LitClient/Workers/: DbWorker.hpp  LayoutWorker.cpp  LayoutWorker.hpp  TokenGenerator.hpp
src/LitConsoleClient/: CMakeLists.txt  main.cpp
src/LitDb/: CMakeLists.txt  Db.cpp  Db.hpp  DbMain.cpp
src/LitService/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  ServiceMain.cpp  Types.hpp
