set(TARGET_NAME LayoutIdentificationTool)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

file(GLOB_RECURSE SETTINGS_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Settings/*.cpp)
file(GLOB_RECURSE SETTINGS_HEADERS ${CMAKE_CURRENT_LIST_DIR}/*.hpp)

file(GLOB_RECURSE COMMON_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
file(GLOB_RECURSE COMMON_HEADERS ${CMAKE_CURRENT_LIST_DIR}/Common/*.hpp)

message(STATUS "SETTINGS SOURCES : '${SETTINGS_SOURCES}'")
message(STATUS "headers : '${SETTINGS_HEADERS}'")
set(SOURCES_FILES
    ${SETTINGS_SOURCES}
    ${COMMON_SOURCES}
    MainWindow.cpp
    main.cpp)


set(HEADER_FILES
   MainWindow.hpp)

source_group("Sources Files" FILES ${SOURCES_FILES})
source_group("Headers Files" FILES ${HEADERS_FILES})

add_executable(${TARGET_NAME}  ${SOURCES_FILES} ${HEADERS_FILES} ${SETTINGS_HEADERS} ${RESOURCES_FILES} ${COMMON_HEADERS})
target_link_libraries(${TARGET_NAME} PUBLIC Qt6::Core  Qt6::Gui Qt6::Widgets)
message(STATUS "Shared dirs for client '${SHARED_INCLUDE_DIRS}'")
target_include_directories(${TARGET_NAME} PUBLIC ${SHARED_INCLUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR})