set(TARGET_NAME LitClient)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)


file(GLOB_RECURSE PAGES_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Pages/** *.cpp)
file(GLOB_RECURSE PAGES_HEADERS ${CMAKE_CURRENT_LIST_DIR}/Pages/** *.hpp)
file(GLOB_RECURSE VIEW_MODEL_HEADERS ${CMAKE_CURRENT_LIST_DIR}/ViewModel/** *.hpp)
file(GLOB_RECURSE VIEW_MODEL_SOURCES ${CMAKE_CURRENT_LIST_DIR}/ViewModel/** *.cpp)
file(GLOB_RECURSE CARD_SOURCES ${CMAKE_CURRENT_LIST_DIR}/LayoutCard/** *.cpp)
file(GLOB_RECURSE CARD_HEADERS ${CMAKE_CURRENT_LIST_DIR}/LayoutCard/** *.hpp)

file(GLOB_RECURSE WORKERS_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Workers/** *.cpp)
file(GLOB_RECURSE WORKERS_HEADERS ${CMAKE_CURRENT_LIST_DIR}/Workers/** *.hpp)

file(GLOB_RECURSE LAYOUT_VIEW_WIDGET_SOURCES ${CMAKE_CURRENT_LIST_DIR}/LayoutWidget *.cpp *.c)
file(GLOB_RECURSE LAYOUT_VIEW_WIDGET_HEADERS ${CMAKE_CURRENT_LIST_DIR}/LayoutWidget *.hpp *.h)

file(GLOB_RECURSE TASK_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Task *.cpp *.c)
file(GLOB_RECURSE TASK_HEADERS ${CMAKE_CURRENT_LIST_DIR}/Task *.hpp *.h)

message(STATUS ${LAYOUT_VIEW_WIDGET_SOURCES})

set(SOURCES_LIST
   ClientMain.cpp
   MainWindow.cpp
   ${PAGES_SOURCES}
   ${VIEW_MODEL_SOURCES}
   ${LAYOUT_VIEW_WIDGET_SOURCES}
   ${CARD_SOURCES}
   ${WORKERS_SOURCES}
   ${TASK_SOURCES})

set(HEADERS_LIST
   MainWindow.hpp
   ${PAGES_HEADERS}
   ${VIEW_MODEL_HEADERS}
   ${LAYOUT_VIEW_WIDGET_HEADERS}
   ${CARD_HEADERS}
   ${WORKERS_HEADERS}
   ${TASK_HEADERS})

set(RESOURCES_DIR ${CMAKE_CURRENT_LIST_DIR}/Resources)

add_executable(${TARGET_NAME} ${SOURCES_LIST} ${HEADERS_LIST} ${RESOURCES_DIR}/resource.qrc)
target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${SHARED_INCLUDE_DIRS})
target_link_libraries(${TARGET_NAME} PRIVATE Qt5::Core Qt5::Widgets Qt5::Gui LayoutReader Crc32)